--- a/styles/style.css
+++ b/styles/style.css
@@ -11,13 +11,26 @@ body {
 }
 
 header {
-    padding: 40px;
+    padding: 15px;
     background: white;
 }
 
 a {
-    color: black;
+    text-align: center;
+    line-height: 16px;
+    position: relative;
+    z-index: 0;
+    text-overflow: ellipsis;
+    border-radius: 12px;
+    padding: 8px 16px;
+    color: #111;
     text-decoration: none;
+}
+
+a:has(.dropDownArrow) {
+    display: flex;
+    grid-gap: 5px;
+    align-items: center;
 }
 
 .headerInner {
@@ -25,6 +38,12 @@ a {
     grid-gap: 20px;
     align-items: center;
     justify-content: space-between;
+}
+
+.headerStart {
+    grid-gap: 0;
+    display: flex;
+    align-items: center;
 }
 
 .huggingLogoMiddle .headerInner {
@@ -37,10 +56,14 @@ a {
 
 .menu {
     display: flex;
-    grid-gap: 35px;
+    grid-gap: 15px;
 }
 
 .newHeaderv1 {
     filter: invert(1);
     font-family: inherit;
+}
+
+.playNowButton {
+    background: rgb(11, 196, 226);
 }
